--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
-img {
+#walrus-showing {
   display: none;
+}
+
+.clickable {
+  cursor: pointer;
+  color: #0088cc;
+}
+
+.clickable:hover {
+  text-decoration: underline;
 }
